{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 630,
  "lineage": "cb2afa7e-539a-8cad-f7a9-bbd990791b6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b15823b90b554926",
            "arn": "arn:aws:ec2:us-east-1:961653683111:elastic-ip/eipalloc-0b15823b90b554926",
            "domain": "vpc",
            "id": "eipalloc-0b15823b90b554926",
            "network_border_group": "us-east-1",
            "private_dns": "ip-192-168-42-230.ec2.internal",
            "public_dns": "ec2-100-29-105-226.compute-1.amazonaws.com",
            "public_ip": "100.29.105.226",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5b13500c0e2a376",
            "arn": "arn:aws:ec2:us-east-1:961653683111:elastic-ip/eipalloc-0e5b13500c0e2a376",
            "domain": "vpc",
            "id": "eipalloc-0e5b13500c0e2a376",
            "network_border_group": "us-east-1",
            "private_dns": "ip-192-168-104-69.ec2.internal",
            "public_dns": "ec2-34-193-183-4.compute-1.amazonaws.com",
            "public_ip": "34.193.183.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:internet-gateway/igw-0312950f0ff95c0d0",
            "id": "igw-0312950f0ff95c0d0",
            "owner_id": "961653683111",
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b15823b90b554926",
            "association_id": "eipassoc-0f72d364923a26652",
            "connectivity_type": "public",
            "id": "nat-0f9d2491239262204",
            "network_interface_id": "eni-08a7fff2dc91d2819",
            "private_ip": "192.168.23.229",
            "public_ip": "100.29.105.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05b2fa15e80387c7b",
            "tags": {
              "Name": "eks-NatGatewayAZ1"
            },
            "tags_all": {
              "Name": "eks-NatGatewayAZ1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5b13500c0e2a376",
            "association_id": "eipassoc-0c93150e83a6908a5",
            "connectivity_type": "public",
            "id": "nat-0c160c93f972e20bb",
            "network_interface_id": "eni-016e5825e8627fdcb",
            "private_ip": "192.168.89.98",
            "public_ip": "34.193.183.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0387849783c2b071b",
            "tags": {
              "Name": "eks-NatGatewayAZ2"
            },
            "tags_all": {
              "Name": "eks-NatGatewayAZ2"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-083d0a7fbd3ae65611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f9d2491239262204",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-083d0a7fbd3ae6561",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private01",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0719054989263496e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c160c93f972e20bb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0719054989263496e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private02",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0312950f0ff95c0d0",
            "id": "r-rtb-00fe82ba0d07752d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fe82ba0d07752d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-083d0a7fbd3ae6561",
            "id": "rtb-083d0a7fbd3ae6561",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-0719054989263496e",
            "id": "rtb-0719054989263496e",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "tags_all": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-00fe82ba0d07752d1",
            "id": "rtb-00fe82ba0d07752d1",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "tags_all": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011505d2f324cc043",
            "route_table_id": "rtb-083d0a7fbd3ae6561",
            "subnet_id": "subnet-0610bab32bb5b5796"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efc25db6dfac581e",
            "route_table_id": "rtb-0719054989263496e",
            "subnet_id": "subnet-00396e23fb2a4eab3"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a33daec31cffec",
            "route_table_id": "rtb-00fe82ba0d07752d1",
            "subnet_id": "subnet-05b2fa15e80387c7b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2aaee61036e0313",
            "route_table_id": "rtb-00fe82ba0d07752d1",
            "subnet_id": "subnet-0387849783c2b071b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:security-group/sg-0576a1c04c0d76ab0",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-0576a1c04c0d76ab0",
            "ingress": [],
            "name": "eks-control-plane-20250127224913770600000004",
            "name_prefix": "eks-control-plane-",
            "owner_id": "961653683111",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-0610bab32bb5b5796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0610bab32bb5b5796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-00396e23fb2a4eab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00396e23fb2a4eab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-05b2fa15e80387c7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b2fa15e80387c7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-0387849783c2b071b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0387849783c2b071b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08e7e920d3d7fd18e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:vpc/vpc-08e7e920d3d7fd18e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07a14a8770f590157",
            "default_route_table_id": "rtb-02ea925b2ca501f53",
            "default_security_group_id": "sg-0684ed7c93f0b141b",
            "dhcp_options_id": "dopt-0d8e2277",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e7e920d3d7fd18e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ea925b2ca501f53",
            "owner_id": "961653683111",
            "tags": {
              "Name": "eks-VPC"
            },
            "tags_all": {
              "Name": "eks-VPC"
            }
          }
        }
      ]
    }
  ]
}